Added latest implementation code with angular

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -7,7 +7,7 @@ body {
 .wd-image {
   /* The image used */ /* 
   background-image: url("./WeDelivery.jpeg"); */
-  background-image: url("./WeDelivery1.jpeg");
+  background-image: url("../../assets/image/WeDelivery.jpeg");
 
   /* Full height */
   height: 100%;
@@ -21,10 +21,12 @@ body {
 .sub-color {
   background-color: #ec5a52;
   color: #fff;
+  border-radius: 2.25rem;
+  padding: 0.5rem 3rem;
 }
-.link-color {
-  color: #003bff;
-  text-align: center;
+
+.placeholder {
+  border-radius: 2.25rem;
 }
 
 .special-card {
@@ -52,15 +54,40 @@ body {
 .para {
   position: absolute;
   margin-top: 10%;
-  margin-right: 65%;
+  margin-right: 55%;
   margin-left: 10%;
   font-family: "Solway", serif;
   font-size: 20px;
 }
 
 .h1-style {
-  font-family: "Kaushan Script", cursive;
+  font-family: "Solway", serif, cursive;
+  font-size: 60px;
   color: #b5423b;
   margin-top: 3%;
-  margin-left: 70%;
+  margin-left: 65%;
+}
+
+.text-center {
+  font-family: "Solway", serif;
+  color: #551028;
+}
+
+.modal-content1 {
+  /* position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column; */
+  flex-direction: column;
+  /* width: 100%; */
+  /* pointer-events: auto; */
+  background-color: #fff;
+  /* background-clip: padding-box; */
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+  outline: 2;
+}
+.link-color {
+  color: #003bff;
+  text-align: center;
 }
